@@ -1,17 +1,17 @@
 version: 0
 
-train: True
+train: False
 test: True
 dataset_class_debug: False
 debug: False
-test_debug: True
+test_debug: False
 device: "cuda"
 test_parameters:
-  save_test_outputs: True
+  save_test_outputs: False
 trainer:
   num_epochs: 2000
-  resume_training: False
-  checkpoint_path: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10_SA/Unetresnet50/09102022_1228/epoch-999-loss-27.6306324.pth"
+  resume_training: True
+  checkpoint_path: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/09102022_1233/epoch-100-loss-0.4844431.pth"
   val_save_interval: 50
   bbox_heatmap_loss: False
   bbox_scatter_loss: True
@@ -19,15 +19,15 @@ trainer:
   bbox_loss_start_epoch: -1
 
 data:
-  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
-  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/val/coco/"
-  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
-  train_aug: True
-  train_batch_size: 5
-  val_batch_size: 5
+  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_15_5_SA/base_classes/train/coco/"
+  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_15_5_SA/base_classes/val/coco/"
+  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_15_5_SA/base_classes/val/coco/"
+  train_aug: False
+  train_batch_size: 64
+  val_batch_size: 64
   test_batch_size: 1
   input_dimension: 320 # EfficientNetB2
-  num_workers: 4
+  num_workers: 32
   #   input_dimension: 384  ResNet18
 heatmap:
   output_dimension: 320
@@ -81,7 +81,7 @@ model:
     embedding_head: 1
 logging:
   root_dir: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/"
-  checkpoint_dir: "PASCAL_3_2_10_SA"
+  checkpoint_dir: "PASCAL_15_5_SA"
   display_log_fraction: 1
 evaluation:
   heatmap_pooling_kernel: 3
