@@ -3,3 +3,5 @@ Working BBox and Center Training
 2. "/home/psrahul/MasterThesis/repo/Phase3/CLIPandDetect/trained_models/13092022_2340/"
 Working BBox,Center and Embedding Training
 d8e3b08cb434ea82c720b0fe7c2e968e84585715
+3. Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.073
+
